# noa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  README.txt  TODO.txt  VERSION
benchmarks/: CMakeLists.txt  EntryPoint.cpp  Helpers.h
benchmarks/src/: BenchCopy.cpp  BenchEwise.cpp  BenchProject.cpp  BenchReduce.cpp  BenchTransform.cpp  BenchTransformSpectrum.cpp
src/akira/: Akira.cpp  CMakeLists.txt  akira.cpp
src/noa/: Angles.h  Append.cmake  Array.h  Array.hpp  ArrayOption.h  Assert.h  Backend.h  Base.h  Base.hpp  CMakeLists.txt  Core.hpp  Define.h  Definitions.h  Device.cpp  Device.h  EntryPoint.cpp  Environment.h  Errno.h  Exception.h  FFT.h  FFT.hpp  Geometry.h  Geometry.hpp  IO.h  IO.hpp  Log.cpp  Log.h  Logger.cpp  Logger.h  Math.h  Math.hpp  Memory.h  Memory.hpp  OS.h  Profiler.h  README.txt  Runtime.hpp  Session.cpp  Session.h  Session.hpp  (+16 more)
src/noa/algorithms/: Algorithms.hpp  Append.cmake  Utilities.hpp
src/noa/base/: Append.cmake  Bounds.hpp  ClampCast.hpp  Complex.hpp  Config.hpp  Error.cpp  Error.hpp  Half.hpp  Irange.hpp  Mat.hpp  Math.hpp  Operators.hpp  Pair.hpp  SafeCast.hpp  Strings.hpp  Threadpool.hpp  Timer.hpp  Traits.hpp  Tuple.hpp  Utils.hpp  Vec.hpp  Zip.hpp
src/noa/common/: Append.cmake  Assert.h  Definitions.h  Environment.h  Exception.cpp  Exception.h  Functors.h  IO.cpp  IO.h  Indexing.h  Inputs.h  Irange.h  Logger.cpp  Logger.h  Math.h  OS.h  Offset.h  Session.cpp  Session.h  String.h  Threadpool.h  Timer.h  Traits.h  Types.h  View.h
src/noa/core/: AccurateSum.hpp  AccurateVariance.hpp  Append.cmake  Arange.hpp  ArgMinMax.hpp  Assert.hpp  Config.hpp  Enums.cpp  Enums.hpp  Error.cpp  Error.hpp  Ewise.hpp  Exception.cpp  Exception.hpp  Indexing.hpp  Interfaces.hpp  Interpolation.hpp  Iota.hpp  Iwise.hpp  Linspace.hpp  Logger.cpp  Logger.hpp  Math.hpp  Namespace.hpp  OS.hpp  Operators.hpp  Reduce.hpp  Remap.hpp  Resize.hpp  Session.cpp  Session.hpp  String.hpp  Subregion.hpp  Traits.hpp  Types.hpp
src/noa/cpu/: AllocatorHeap.hpp  Allocators.hpp  Append.cmake  Blas.cpp  Blas.hpp  Copy.hpp  CubicBSplinePrefilter.hpp  Device.cpp  Device.h  Device.hpp  Event.h  Event.hpp  Ewise.hpp  EwiseBinary.hpp  EwiseTrinary.hpp  EwiseUnary.hpp  Execution.h  FFT.h  Find.cpp  Find.hpp  Fourier.h  Iwise.hpp  Math.h  Median.hpp  Memory.h  OpenMP.h  Permute.hpp  Pointer.h  PtrHost.h  Reduce.hpp  ReduceAxesEwise.hpp  ReduceAxesIwise.hpp  ReduceBinary.hpp  ReduceEwise.hpp  ReduceIwise.hpp  ReduceUnary.hpp  Set.hpp  Sort.cpp  Sort.h  Sort.hpp  (+3 more)
src/noa/cryoem/: Image.h
src/noa/details/: Array.inl  Device.inl  Texture.inl
src/noa/fft/: Append.cmake  Factory.hpp  Remap.h  Remap.hpp  Resize.h  Resize.hpp  Transform.cpp  Transform.h  Transform.hpp
src/noa/files/: AbstractImageFile.h  CSV.cpp  CSV.h  File.h  ImageFile.cpp  ImageFile.h  MRCFile.cpp  MRCFile.h  Project.cpp  Project.h  ProjectFile.cpp  ProjectFile.h  TIFFFile.h  Text.cpp  Text.h  TextFile.cpp  TextFile.h
src/noa/geometry/: Polar.h  Prefilter.h  Rotate.h  Scale.h  Shift.h  Symmetry.h  Transform.h
src/noa/gpu/: Append.cmake  Backend.hpp  Base.h  Memory.h  Pointer.h
src/noa/include/: Assert.h  Core.h  Helper.h  InputManager.h  Log.h  Noa.h  Parser.h  String.h  Traits.h  Usage.h
src/noa/io/: Append.cmake  BinaryFile.cpp  BinaryFile.hpp  Cast.hpp  Encoding.cpp  Encoding.hpp  IO.cpp  IO.h  IO.hpp  ImageFile.cpp  ImageFile.hpp  Inputs.cpp  Inputs.h  OS.h  OS.hpp  TextFile.hpp
src/noa/managers/: Input.cpp  Input.h  InputManager.cpp  InputManager.h  Inputs.cpp  Inputs.h  Project.h  Table.h  inputs.cpp  inputs.h
src/noa/math/: Blas.h  Complex.h  Ewise.h  Find.h  LinAlg.h  Random.h  Reduce.h
src/noa/memory/: Cast.h  Copy.h  Factory.h  Index.h  Permute.h  Resize.h
src/noa/program/: EntryPoint.cpp
src/noa/runtime/: Allocator.cpp  Allocator.hpp  Append.cmake  Array.hpp  ArrayOption.hpp  Backend.hpp  Blas.hpp  Complex.hpp  CopyBatches.hpp  Device.cpp  Device.hpp  Event.hpp  Ewise.hpp  Factory.hpp  Indexing.hpp  Iwise.hpp  Random.hpp  Reduce.hpp  ReduceAxesEwise.hpp  ReduceAxesIwise.hpp  ReduceEwise.hpp  ReduceIwise.hpp  Resize.hpp  Session.cpp  Session.hpp  Sort.hpp  Stream.cpp  Stream.hpp  Subregion.hpp  Traits.hpp  Utilities.hpp  Utils.hpp  View.hpp
src/noa/signal/: Append.cmake  Bandpass.hpp  CTF.hpp  Convolve.h  Convolve.hpp  Correlate.hpp  FSC.hpp  FilterSpectrum.hpp  Median.h  MedianFilter.hpp  PhaseShift.hpp  Shape.h  Standardize.hpp  Traits.hpp  Window.hpp
src/noa/structures/: Image.cpp  Vectors.h
src/noa/unified/: Allocator.cpp  Allocator.h  Allocator.hpp  Append.cmake  Array.cpp  Array.h  Array.hpp  Array.inl  ArrayOption.h  ArrayOption.hpp  Backends.h  Blas.hpp  Cast.hpp  Complex.hpp  CopyBatches.hpp  Device.cpp  Device.h  Device.hpp  Device.inl  Event.hpp  Ewise.hpp  FFT.h  Factory.hpp  Find.hpp  Geometry.h  Handle.hpp  IO.h  IO.hpp  Indexing.hpp  Interpolation.hpp  Iwise.hpp  Math.h  Memory.h  Random.hpp  Reduce.hpp  ReduceAxesEwise.hpp  ReduceAxesIwise.hpp  ReduceEwise.hpp  ReduceIwise.hpp  Resize.hpp  (+17 more)
src/noa/util/: Arrays.h  Assert.h  Bool2.h  Bool3.h  Bool4.h  BoolX.h  Complex.h  Constants.h  Errno.h  Exception.h  Flag.h  Float2.h  Float3.h  Float4.h  FloatX.h  IO.cpp  IO.h  Inputs.cpp  Inputs.h  Int2.h  Int3.h  Int4.h  IntX.h  Log.cpp  Log.h  Mat2.h  Mat3.h  Mat4.h  MatX.h  Math.h  OS.h  Pointer.h  PointerOpaque.h  Profiler.h  Rot3.h  Sizes.h  Stats.h  String.h  Traits.h  Types.h  (+3 more)
src/noa/utils/: Assert.h  Exception.h  Helper.h  Log.cpp  Log.h  Parser.h  String.cpp  String.h  Traits.h
src/noa/xform/: Append.cmake  CubicBSplinePrefilter.hpp  Draw.hpp  FourierProject.hpp  PolarTransform.hpp  PolarTransformSpectrum.hpp  Project.hpp  RotationalAverage.hpp  Symmetry.hpp  Texture.hpp  Traits.hpp  Transform.hpp  TransformSpectrum.hpp  Utils.hpp
src/programs/: Akira.cpp  CMakeLists.txt
tests/: Assets.cpp  Assets.h  Assets.hpp  CMakeLists.txt  Catch.hpp  EntryPoint.cpp  Helpers.h  README.txt  Utils.hpp  main.cpp  noa_gtest.cpp
tests/data/: GenerateData.sh
tests/noa/: Append.cmake  TestUnifiedArray.cpp  TestUnifiedDevice.cpp  TestUnifiedStream.cpp
(+2041 files in other folders)
